k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: abahal/k8s-multi-container-app-ui:latest
          # Crucial for local dev: tells K8s to look at your machine's local docker registry instead of Docker Hub
          # imagePullPolicy: Never
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          # env:
          #   - name: VITE_API_BASE_URL
          #     valueFrom:
          #       configMapKeyRef:
          #         name: app-config
          #         key: VITE_API_BASE_URL
