k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: k8s-multi-container-app-api:dev
          # Crucial for local dev: tells K8s to look at your machine's local docker registry instead of Docker Hub
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
