k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: abahal/k8s-multi-container-app-worker:latest
          # Crucial for local dev: tells K8s to look at your machine's local docker registry instead of Docker Hub
          # imagePullPolicy: Never
          imagePullPolicy: Always
